# pipecat-plugin-tenvad

./: README.md  pyproject.toml  ten_vadAnalyzer.py
